扫描二维码获取sn变为code2